<resources>
    <string name="app_name">WhereToFly</string>
    <string name="enterEmail">Your email</string>
    <string name="enterPassword">Your password</string>
    <string name="mainTitle">WHERE TO FLY</string>
    <string name="btnsingup">SINGUP</string>
    <string name="singGoogle">Sing In with Google</string>
    <string name="newUser">New User?</string>
    <string name="register"> Register here</string>
    <string name="userName">Enter you name</string>
    <string name="userNick">Your nick name</string>
    <string name="selectCountrie">Select your countrie</string>
    <string name="selectState">Select your state</string>
    <string name="userPhone">Your phone number</string>
    <string name="userEmail">Your email</string>
    <string name="userPassword">Your password</string>
    <string name="btnSave">Save</string>
    <string name="errorEmail">Please enter your Email</string>
    <string name="errorPassword">Please enter your password</string>
    <string name="errorName">Please enter your name</string>
    <string name="errorPhone">Please enter your phone number</string>
    <string name="errorNick">Please enter your nick name</string>
    <string name="home">Home</string>
    <string name="add">Add a place</string>
    <string name="search">Search a place</string>
    <string name="settings">Settings</string>


    <string-array name="countries">
        <item>United States of America</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cote d-Ivoire</item>
        <item>Cabo Verde</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo (Congo-Brazzaville)</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czechia (Czech Republic)</item>
        <item>Democratic Republic of the Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Eswatini (fmr. "Swaziland")</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Holy See</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar (formerly Burma)</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Korea</item>
        <item>North Macedonia</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine State</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>

    <string-array name="usStates_arrays">
        <item>Alabama - AL</item>
        <item>Alaska - AK</item>
        <item>Arizona - AZ</item>
        <item>Arkansas - AR</item>
        <item>California - CA</item>
        <item>Colorado - CO</item>
        <item>Connecticut - CT</item>
        <item>Delaware - DE</item>
        <item>Florida - FL</item>
        <item>Georgia - GA</item>
        <item>Hawaii - HI</item>
        <item>Idaho - ID</item>
        <item>Illinois - IL</item>
        <item>Indiana - IN</item>
        <item>Iowa - IA</item>
        <item>Kansas - KS</item>
        <item>Kentucky - KY</item>
        <item>Louisiana - LA</item>
        <item>Maine - ME</item>
        <item>Maryland - MD</item>
        <item>Massachusetts - MA</item>
        <item>Michigan - MI</item>
        <item>Minnesota - MN</item>
        <item>Mississippi - MS</item>
        <item>Missouri - MO</item>
        <item>Montana - MT</item>
        <item>Nebraska - NE</item>
        <item>Nevada - NV</item>
        <item>New Hampshire - NH</item>
        <item>New Jersey - NJ</item>
        <item>New Mexico - NM</item>
        <item>New York - NY</item>
        <item>North Carolina - NC</item>
        <item>North Dakota - ND</item>
        <item>Ohio - OH</item>
        <item>Oklahoma - OK</item>
        <item>Oregon - OR</item>
        <item>Pennsylvania - PA</item>
        <item>Rhode Island - RI</item>
        <item>South Carolina - SC</item>
        <item>South Dakota - SD</item>
        <item>Tennessee - TN</item>
        <item>Texas - TX</item>
        <item>Utah - UT</item>
        <item>Vermont - VT</item>
        <item>Virginia - VA</item>
        <item>Washington - WA</item>
        <item>West Virginia - WV</item>
        <item>Wisconsin - WI</item>
        <item>Wyoming - WY</item>
        <item>Other ...</item>
    </string-array>
</resources>