<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:cnb_iconColor="@color/orange_700"
        app:cnb_iconTintMode="src_in"/>

    <item
        android:id="@+id/add"
        android:title="@string/add"
        android:icon="@drawable/ic_navigation"
        app:cnb_iconColor="@color/orange_700"
        app:cnb_iconTintMode="src_in"/>

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_searching"
        app:cnb_iconColor="@color/orange_700"
        app:cnb_iconTintMode="src_in"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:cnb_iconColor="@color/orange_700"
        app:cnb_iconTintMode="src_in"/>
</menu>
