<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme1_one"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:outlineSpotShadowColor="@color/white"
                app:srcCompat="@drawable/drone_logo2" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView2"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="44dp"
                android:fontFamily="@font/bowlby_one_sc"
                android:gravity="center"
                android:text="WELCOME"
                android:textColor="@color/white"
                android:textSize="40sp"></TextView>

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:layout_below="@+id/welcome"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="24dp"
                android:background="@color/theme1_dark2"
                android:weightSum="4">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:src="@drawable/ic_email"
                    android:background="@color/theme1_dark"
                    android:layout_weight="0.5">
                </ImageView>

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textSize="20dp"
                    android:hint="@string/enterEmail"
                    android:backgroundTint="@color/theme1_dark2"
                    android:paddingLeft="15dip"
                    android:textColorHint="@color/gray_600"
                    android:inputType="textWebEmailAddress"
                    android:textColor="@color/white">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:layout_below="@+id/ll1"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/theme1_dark2"
                android:weightSum="4">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:src="@drawable/ic_lock_24"
                    android:background="@color/theme1_dark"
                    android:layout_weight="0.5">
                </ImageView>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textSize="20dp"
                    android:hint="@string/enterPassword"
                    android:backgroundTint="@color/theme1_dark2"
                    android:paddingLeft="15dip"
                    android:textColorHint="@color/gray_600"
                    android:inputType="textPassword"
                    android:textColor="@color/white">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginRight="32dp"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:layout_marginLeft="4dp"

                    android:textColor="@color/white"/>
            </LinearLayout>
            <Button
                android:id="@+id/btnSingUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll2"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/orange_700"
                android:fontFamily="@font/montserrat"
                android:text="@string/btnsingup"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/rvSigninGoogle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/btnSingUp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="32dp"
                android:background="@color/orange_700">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_centerVertical="true"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/google_icon" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="6dp"
                        android:layout_toRightOf="@id/imageView3"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/singGoogle"
                        android:textColor="@color/white" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>